--- a/src/DataScientist-1.ipynb
+++ b/src/DataScientist-1.ipynb
@@ -8,11 +8,11 @@
     "# **The Case of the Elusive Suspect**  \n",
     "### *Notes from the Data Underground*\n",
     "\n",
-    "Every case kicks off the same way — with **patterns**. Quiet habits. Little routines hiding in plain sight. Numbers that, on their own, don’t scream guilty. But line ’em up just right, and suddenly a shape emerges out of the noise.\n",
+    "Every case kicks off the same way — with **patterns**. Quiet habits. Little routines hiding in plain sight. Numbers that, on their own, don’t scream guilty. But line them up just right, and suddenly a shape emerges out of the noise.\n",
     "\n",
     "This job? It ain’t about catching typos or balancing books. We’re profilers. Names don’t mean much — it’s the numbers behind the names that tell the story. How a suspect moves, how they react, lie, snap.\n",
     "\n",
-    "Each stat? It’s a tick on their psychological polygraph. You don’t tail ’em through alleys — you chase their traits through **scatterplots** and **correlation scores**. Because guilt... It doesn’t always show on the surface, but it hides in their stress recovery, their manipulation score, their stubborn refusal to play by the rules. The numbers don’t lie — you just gotta know how to read ’em.\n"
+    "Each stat? It’s a tick on their psychological polygraph. You don’t tail them through alleys — you chase their traits through **scatterplots** and **correlation scores**. Because guilt... It doesn’t always show on the surface, but it hides in their stress recovery, their manipulation score, their stubborn refusal to play by the rules. The numbers don’t lie — you just gotta know how to read ’em.\n"
    ]
   },
   {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 209,
    "id": "44316db4",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 210,
    "id": "be4c65d0",
    "metadata": {},
    "outputs": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 211,
    "id": "6c11cad3",
    "metadata": {},
    "outputs": [
@@ -422,7 +422,7 @@
    "id": "4b0c7713",
    "metadata": {},
    "source": [
-    "Some traits? Pure noise. **BMI, Outdoor Skills, Balance, Motor Control, Genetic Marker Score** — all of ’em blur together like fogged-up glass on a rainy stakeout. You could stare for hours and still walk away with nothing but a headache.\n",
+    "Some traits? Pure noise. **BMI, Outdoor Skills, Balance, Motor Control, Genetic Marker Score** — all of them blur together like fogged-up glass on a rainy stakeout. You could stare for hours and still walk away with nothing but a headache.\n",
     "\n",
     "But some? They cut sharp. **Dominance Score, Anticipation Ability, Substance History** — you see a split, a fracture line. One side red. One side blue. That’s a fingerprint in the dust.\n",
     "\n",
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 212,
    "id": "ac603e83",
    "metadata": {},
    "outputs": [
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 213,
    "id": "d5854d4f",
    "metadata": {},
    "outputs": [
@@ -598,7 +598,7 @@
     "\n",
     "Others? A waste of ink. **Outdoor SKills**, **Motor Control** — noise. a smear of dots going nowhere. Static. The kind of mess that gets cases tossed before they hit the desk.\n",
     "\n",
-    "But a real detective doesn’t stop at patterns. You **test** 'em. You blindfold the data — no names, no past — and see if it still talks.\n",
+    "But a real detective doesn’t stop at patterns. You **test** them. You blindfold the data — no names, no past — and see if it still talks.\n",
     "\n",
     "Those last two plots? Green and silent. But if the split still shows...\n",
     "you’ve got something real."
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 214,
    "id": "006d9217",
    "metadata": {},
    "outputs": [
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 215,
    "id": "762fd2e1",
    "metadata": {},
    "outputs": [
@@ -727,7 +727,7 @@
        "Text(0.5, 1.0, 'Outdoor Skills vs Motor Control by Suspect Status')"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     },
