A real run-down, badass detective, should be able to captivate you with his high level charm even before the story has really begun.

--- a/src/DataScientist-1.ipynb
+++ b/src/DataScientist-1.ipynb
@@ -8,11 +8,11 @@
     "# **The Case of the Elusive Suspect**  \n",
     "### *Notes from the Data Underground*\n",
     "\n",
-    "Every case kicks off the same way — with **patterns**. Quiet habits. Little routines hiding in plain sight. Numbers that, on their own, don’t scream guilty. But line them up just right, and suddenly a shape emerges out of the noise.\n",
+    "This gig ain’t about clean cops or obvious clues. It’s shadows in the noise, **patterns** hiding in plain sight. We hunt suspects  by the cold truth in their numbers — **scatterplots**, **correlation scores**, the whole dirty map.\n",
     "\n",
-    "This job? It ain’t about catching typos or balancing books. We’re profilers. Names don’t mean much — it’s the numbers behind the names that tell the story. How a suspect moves, how they react, lie, snap.\n",
+    "Before the models take the stand, we get our hands dirty. Clean the evidence, line up the clues, and figure out what to watch for when the real work begins.\n",
     "\n",
-    "Each stat? It’s a tick on their psychological polygraph. You don’t tail them through alleys — you chase their traits through **scatterplots** and **correlation scores**. Because guilt... It doesn’t always show on the surface, but it hides in their stress recovery, their manipulation score, their stubborn refusal to play by the rules. The numbers don’t lie — you just gotta know how to read ’em.\n"
+    "This project’s about learning the streets — spotting the difference, knowing the traps, and seeing what really matters when the data won’t talk straight.\n"
    ]
   },
   {
@@ -22,7 +22,7 @@
    "source": [
     "### **Prepping the Case**\n",
     "\n",
-    "Every detective knows you don’t just waltz into a case blind. You sharpen your tools, get a feel for the scene — sniff out the details before making a move. We do the same. You don’t just open a file — you dissect it, let the clues speak.\n",
+    "No detective jumps in blind. You study the file, let the clues breathe.\n",
     "\n",
     "The essentials? We’ve got three main leads:\n"
    ]
@@ -32,9 +32,11 @@
    "id": "4dedee4c",
    "metadata": {},
    "source": [
-    "- **`Train_case_files.csv`** — our database of familiar faces. This is where the model learns the ropes — stumbles a bit, finds its footing, and starts to recognize the patterns that matter.  \n",
-    "- **`Validation_case_files.csv`** — the quiet room in the back. We use it mid-training, not to teach, but to keep things in check. Make sure the model’s not just memorizing answers, but starting to think for itself.  \n",
-    "- **`New_suspects.csv`** — the wild unknown. No names. No labels. Just raw behavior and a question hanging in the air: who’s who?\n"
+    "- **`Train_case_files.csv`** — where the model learns the ropes. Stumbles, then starts seeing the signs.  \n",
+    "\n",
+    "- **`Validation_case_files.csv`** —  the watchdog. Keeps the model honest, making sure it thinks, not just parrots.  \n",
+    "\n",
+    "- **`New_suspects.csv`** — fresh cases. Just raw data and a question: who’s who?\n"
    ]
   },
   {
@@ -42,11 +44,9 @@
    "id": "2e9a44af",
    "metadata": {},
    "source": [
-    "From the **full case archive**, we slice off 80%. That becomes our `Train_case_files.csv` — the rough streets where the model earns its badge. The remaining 20%? That’s `Validation_case_files.csv`, our internal check. Not for training — for keeping the detective honest. Making sure it's learning the patterns, not just memorizing the faces.\n",
+    "From the **full archive**, we slice off 80%. That’s `Train_case_files.csv` — the streets where the model earns its badge. The other 20%? That’s `Validation_case_files.csv`, the internal check to keep things real.\n",
     "\n",
-    "It’s not enough to remember names — the model’s got to understand the story behind the numbers. That’s how you know it’s learning, not just parroting back what it saw.\n",
-    "\n",
-    "Still, the real challenge comes later. When **`New_suspects.csv`** hits the desk — fresh cases, no labels, no training wheels. That’s when you find out if all that prep work paid off.\n"
+    "The real test? When `New_suspects.csv` hits the desk. Unlabeled. Raw. That’s when you find out if the prep was worth the cigarette burns."
    ]
   },
   {
