Confusion matrix makes people confused

--- a/src/DataScientist-1.ipynb
+++ b/src/DataScientist-1.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 90,
    "id": "44316db4",
    "metadata": {},
    "outputs": [
@@ -79,10 +79,10 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "df_train = pd.read_csv('./Suspects/Train_case_files.csv')\n",
-    "train_df, val_df = train_test_split(df_train, test_size=0.2, random_state=42, shuffle=True)\n",
+    "train_df, val_df = train_test_split(df_train, test_size=0.20, random_state=42, shuffle=True)\n",
     "\n",
-    "train_df.to_csv('Train_case_files80.csv', index=False)\n",
-    "val_df.to_csv('Validation_case_files20.csv', index=False)\n",
+    "train_df.to_csv('Suspects/Train_case_files80.csv', index=False)\n",
+    "val_df.to_csv('Suspects/Validation_case_files20.csv', index=False)\n",
     "\n",
     "print(f\"Training set: {len(train_df)} rows ({len(train_df)/len(df_train)*100:.2f}%)\")\n",
     "print(f\"Validation set: {len(val_df)} rows ({len(val_df)/len(df_train)*100:.2f}%)\")\n"
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 91,
    "id": "be4c65d0",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 92,
    "id": "6c11cad3",
    "metadata": {},
    "outputs": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 93,
    "id": "ac603e83",
    "metadata": {},
    "outputs": [
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 100,
    "id": "d5854d4f",
    "metadata": {},
    "outputs": [
@@ -514,12 +514,12 @@
     "plt.subplots_adjust(hspace=0.5)\n",
     "\n",
     "plt.subplot(2,2,1)\n",
-    "sns.scatterplot(data=df_train, x='Dominance Score', y='Substance History', hue='suspect', alpha=0.6, palette={'red', 'blue'})\n",
+    "sns.scatterplot(data=df_train, x='Dominance Score', y='Substance History', hue='suspect', alpha=0.6, palette={'innocent': 'blue', 'guilty': 'red'})\n",
     "plt.legend()\n",
     "plt.title(\"Dominance Score vs Substance History by Suspects Status\")\n",
     "\n",
     "plt.subplot(2,2,2)\n",
-    "sns.scatterplot(data=df_train, x='Outdoor Skills', y='Motor Control', hue='suspect', alpha=0.6, palette={'red', 'blue'})\n",
+    "sns.scatterplot(data=df_train, x='Outdoor Skills', y='Motor Control', hue='suspect', alpha=0.6, palette={'innocent': 'blue', 'guilty': 'red'})\n",
     "plt.legend()\n",
     "plt.title(\"Outdoor Skills vs Motor Control by Suspects Status\")\n",
     "\n",
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "006d9217",
    "metadata": {},
    "outputs": [
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 96,
    "id": "762fd2e1",
    "metadata": {},
    "outputs": [
@@ -673,7 +673,7 @@
        "Text(0.5, 1.0, 'Outdoor Skills vs Motor Control by Suspect Status')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     },
