Sparkle and apply human creativity

--- a/src/DataScientist-1.ipynb
+++ b/src/DataScientist-1.ipynb
@@ -11,7 +11,7 @@
     "Jeff “The Eyeball” Mallory used to handle this gig. Real numbers guy. Lived off black coffee and the smell of CSVs. One day he looked too deep into a scatterplot, muttered “the clusters are watching,” and vanished. Union says burnout. I say nerves.\n",
     "\n",
     "Now it’s my mess.\n",
-    "I don’t read files — I read people. But the brass is broke, Jeff’s gone, and the city’s piling suspects like empty bottles behind a dive bar. So we do what desperate lonely men do: we teach a machine to care.\n"
+    "I don’t read files — I read people. But the brass is broke, Jeff’s gone, and the city’s piling suspects like empty bottles behind a dive bar. So we do what desperate men do: we teach a machine to care.\n"
    ]
   },
   {
