Edit some quirky parts

--- a/src/DataScientist-2.ipynb
+++ b/src/DataScientist-2.ipynb
@@ -126,7 +126,7 @@
    "metadata": {},
    "source": [
     "<br>\n",
-    "The truth file? That’s our gold standard. The model either matches it, or it goes back to rookie school."
+    "The truth file? That’s our gold standard. The machine either matches the truth, or it gets the rookie treatment."
    ]
   },
   {
@@ -539,7 +539,7 @@
    "id": "ebc5008d-38b7-406a-9c66-1597cf41037c",
    "metadata": {},
    "source": [
-    "Squad’s in. Accuracy’s sitting at 0.99, F1s are cleaner than a cop’s badge at a press conference. One slip on guilty, everything else tight. Better than any of them solo - less noise, fewer mistakes. Team work does the dream work."
+    "Accuracy at 0.99. The squad saw what a bunch of pairs of eyes couldn’t. It should've been a triumph. Instead, it was just math proving the obvious."
    ]
   },
   {
@@ -696,9 +696,7 @@
    "id": "52ff50a6-a98f-48f7-a52d-b1ebb53f1e36",
    "metadata": {},
    "source": [
-    "Same song. BMI, Outdoor Skills, Balance, Motor Control, Genetic Marker Score — still noise, just static. But Dominance Score, Anticipation Ability, Substance History? Still sharp. Clean split, clear clusters.\n",
-    "\n",
-    "It mirrors Part I — the pattern holds. No surprises, no drama. The model’s seeing the same story twice, and that’s how you know it’s not bluffing."
+    "The usual static: BMI, Outdoor Skills, Motor Control. Useless. But the signals were clear: Dominance Score, Anticipation, Substance History. Still sharp. The clean split held. The model saw the same chalk outline twice. No surprises, kid. It wasn't bluffing."
    ]
   },
   {
