Remove meaningless py file

--- a/src/DataScientist-2.ipynb
+++ b/src/DataScientist-2.ipynb
@@ -715,7 +715,7 @@
    "source": [
     "## **Case Closed**\n",
     "\n",
-    "The rain’s still tapping the windshield when I hit 85th again. Same street. Different case. Jeff “The Eye” Mallory would’ve loved this one — clean splits, sharp signals, no fog left to squint through.\n",
+    "The rain’s still tapping the windshield when I hit 85th again. Same street. Different case. Jeff “The Eye” Mallory would’ve loved this one - clean splits, sharp signals, no fog left to squint through.\n",
     "\n",
     "The models held. Noise got tossed. The real traits stood tall. KNN flinched, the forest didn’t, and the squad together saw what one pair of eyes couldn’t.\n",
     "\n",
